--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -1,5 +1,4 @@
-form input[type=text] {
-    
+form input[type=text] { 
   display: inline-block !important;
   vertical-align: top !important;
   font: 400 20px Arial !important;
@@ -16,10 +15,10 @@ form input[type=text] {
   padding-right: 30% !important;
   max-width: 75%;
   box-sizing: border-box;
-  margin-right: -30px;
   text-indent: 5px;
   height: 30px;
   letter-spacing: normal;
+  width: 73%;
 }
 
 button {
